--- a/login.html
+++ b/login.html
@@ -11,6 +11,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <style>
+        /* Add to existing styles */
+        .password-wrapper {
+            position: relative;
+            width: 100%;
+        }
+
+        #password {
+            width: 100%;
+            padding-right: 40px; /* Space for eye icon */
+            box-sizing: border-box;
+        }
+
+        .password-toggle {
+            position: absolute;
+            right: 12px;
+            top: 55%;
+            transform: translateY(-50%);
+            background: none;
+            border: none;
+            color: #666;
+            cursor: pointer;
+            padding: 8px;
+            z-index: 2;
+        }
+
+        .password-toggle:hover {
+            color: #333;
+        }
+
+        /* Remove any existing .toggle-password styles */
+        .toggle-password { display: none !important; }
+    </style>
 </head>
 <body class="login-page">
     <nav>
@@ -50,13 +83,15 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <div class="password-input-container">
-                        <input type="password" id="password" name="password" required
-                               placeholder="Enter your password"
-                               autocomplete="current-password">
-                        <button type="button" class="toggle-password" aria-label="Toggle password visibility">
-                            <i class="fas fa-eye"></i>
-                        </button>
+                    <div class="input-group">
+                        <div class="password-wrapper">
+                            <input type="password" id="password" name="password" required
+                                   placeholder="Enter your password"
+                                   autocomplete="current-password">
+                            <button type="button" class="password-toggle" aria-label="Show password">
+                                <i class="fas fa-eye"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group remember-me">
@@ -124,32 +159,56 @@
         </div>
     </footer>
     <script>
+        // Initialize Supabase client if not already initialized
         document.addEventListener('DOMContentLoaded', () => {
-            // Login form handler
+            if (!window.supabaseClient && typeof supabase !== 'undefined') {
+                window.supabaseClient = supabase.createClient(
+                    'https://qhkcrrphsjpytdfqfamq.supabase.co',
+                    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFoa2NycnBoc2pweXRkZnFmYW1xIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzQzMjQ4NzgsImV4cCI6MjA0OTkwMDg3OH0.S9JT_WmCWYMvSixRq1RrB1UlqXm6fix_riLFYCR3JOI'
+                );
+                document.dispatchEvent(new Event('supabase:ready'));
+            }
+        });
+
+        document.addEventListener('supabase:ready', () => {
             document.getElementById('loginForm').addEventListener('submit', async (e) => {
                 e.preventDefault();
                 const email = document.getElementById('email').value;
                 const password = document.getElementById('password').value;
+
+                if (!window.supabaseClient?.auth) {
+                    alert('Authentication system not ready. Please try again.');
+                    return;
+                }
 
                 const { data, error } = await window.supabaseClient.auth.signInWithPassword({
                     email: email,
                     password: password
                 });
 
-                console.log('Login Response:', { data, error });
-                if (data?.user) {
-                    console.log('User Session:', data.user);
-                    console.log('Auth Token:', data.session?.access_token);
-                }
-
                 if (error) {
                     alert('Login failed: ' + error.message);
                     return;
                 }
 
-                // Redirect to dashboard after successful login
                 window.location.href = 'dashboard.html';
             });
+        });
+
+        document.addEventListener('DOMContentLoaded', () => {
+            // Password visibility toggle
+            const passwordToggle = document.querySelector('.password-toggle');
+            const passwordInput = document.getElementById('password');
+            
+            if (passwordToggle && passwordInput) {
+                passwordToggle.addEventListener('click', () => {
+                    const isPassword = passwordInput.type === 'password';
+                    passwordInput.type = isPassword ? 'text' : 'password';
+                    passwordToggle.innerHTML = isPassword 
+                        ? '<i class="fas fa-eye-slash"></i>'
+                        : '<i class="fas fa-eye"></i>';
+                });
+            }
         });
     </script>
 </body>
